--- a/File_Application/BE_Hmart/src/main/resources/templates/FE_Hmart/single-product.html
+++ b/File_Application/BE_Hmart/src/main/resources/templates/FE_Hmart/single-product.html
@@ -472,7 +472,7 @@
 
                             <div class="pro-details-quality">
                                 <div class="col-2 p-0">
-                                    <input class="form-control p-2 text-center " ng-model="productQty" ng-value="product.productQty" type="number" min="1" max="{{product.productQty}}" style="font-size: 16px;" />
+                                    <input class="form-control p-2 text-center " ng-model="productQty" type="number" min="1" max="{{product.productQty}}" style="font-size: 16px;" />
                                 </div>
                                 <div class="pro-details-cart">
                                     <button class="add-cart" ng-click="cart.addWithQty(product.id)"> Add To Cart</button>
