--- a/File_Application/BE_Hmart/src/main/resources/templates/FE_Hmart/empty-cart.html
+++ b/File_Application/BE_Hmart/src/main/resources/templates/FE_Hmart/empty-cart.html
@@ -78,7 +78,7 @@
                             <div class="header-actions">
                                 <a href="#offcanvas-cart" class="header-action-btn header-action-btn-cart offcanvas-toggle pr-0">
                                     <i class="pe-7s-shopbag"></i>
-                                    <span class="header-action-num">{{cart.count?cart.count:'0'}}</span>
+                                    <span class="header-action-num">{{cart.count?cart.count:'+'}}</span>
                                 </a>
                                 <a href="#offcanvas-mobile-menu" class="header-action-btn header-action-btn-menu offcanvas-toggle d-lg-none">
                                     <i class="pe-7s-menu"></i>
@@ -417,23 +417,7 @@
             </div>
         </div>
         <!-- OffCanvas Menu End -->
-        <!-- breadcrumb-area start -->
-        <div class="breadcrumb-area">
-            <div class="container">
-                <div class="row align-items-center justify-content-center">
-                    <div class="col-12 text-center">
-                        <h2 class="breadcrumb-title">Cart</h2>
-                        <!-- breadcrumb-list start -->
-                        <ul class="breadcrumb-list">
-                            <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                            <li class="breadcrumb-item active">Cart</li>
-                        </ul>
-                        <!-- breadcrumb-list end -->
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- breadcrumb-area end -->
+
         <!-- Empty Cart area start -->
         <div class="empty-cart-area pb-100px pt-100px">
             <div class="container">
