--- a/File_Application/BE_Hmart/src/main/resources/templates/FE_Hmart/shop-4-column.html
+++ b/File_Application/BE_Hmart/src/main/resources/templates/FE_Hmart/shop-4-column.html
@@ -55,7 +55,7 @@
                         <div class="col d-none d-lg-block">
                             <div class="top-nav">
                                 <ul>
-                                    <li><a href=""><i class="fa fa-phone"></i> +84 769 628 823</a></li>
+                                    <li><a href=""><i class="fa fa-phone"></i> {{user.phone}}</a></li>
                                     <li><a href=""><i class="fa fa-envelope-o"></i>{{user.email}}</a></li>
                                 </ul>
                             </div>
