--- a/File_Application/BE_Hmart/src/main/resources/templates/FE_Hmart/shop-4-column.html
+++ b/File_Application/BE_Hmart/src/main/resources/templates/FE_Hmart/shop-4-column.html
@@ -168,7 +168,7 @@
                                                 <li class="title"><a href="#">Related Shop Pages</a></li>
                                                 <li><a href="my-account.html">Account Page</a></li>
                                                 <li><a href="login.html">Login & Register Page</a></li>
-                                                <li><a href="empty-cart.html">Empty Cart Page</a></li>
+                                                <li><a ng-click="logout()">Logout</a></li>
                                                 <li><a href="thank-you-page.html">Thank You Page</a></li>
                                             </ul>
                                             <ul class="d-flex align-items-center p-0 border-0 flex-column justify-content-center">
